# tagit

./: .gitignore  .tagitrc  README.md  pyproject.toml  tagit.py
tagit/: __init__.py
