[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "tagit"
version = "0.0.3"
description = "An antotagger for git."
readme = "README.md"
homepage = "https://github.com/pwwang/tagit"
license = "MIT"
repository = "https://github.com/pwwang/completions"
authors = [ "pwwang <pwwang@pwwang.com>",]

[tool.poetry.dependencies]
python = "^3.4"
python-simpleconf = "^0.1.0"
pyparam = "^0.1.0"
cmdy = "^0.1.0"
toml = "*"
prompt_toolkit = "^2.0.0"

[tool.poetry.scripts]
tagit = "tagit:main"
